--- a/Day 4/ExpressWeatherApp/views/home.hbs
+++ b/Day 4/ExpressWeatherApp/views/home.hbs
@@ -76,10 +76,10 @@
     <h1 class="mt-5">Welcome to Weather App</h1>
     <p class="lead"> Key in your address/ City/ State, we will get you the Weather information</p>
     </div>
-    <form class="form-signin">
+    <form class="form-signin" method="post" action="/weather.html">
       <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" id="inputEmail" style="margin-bottom:10px" class="form-control" placeholder="Enter City / Address" required
-        autofocus>
+      <input type="text" name="address" id="inputEmail" style="margin-bottom:10px" class="form-control" placeholder="Enter City / Address" required
+        autofocus autocomplete="off">
       <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
     </form>
   </main>
