--- a/Day 4/ExpressWeatherApp/views/weather.hbs
+++ b/Day 4/ExpressWeatherApp/views/weather.hbs
@@ -61,20 +61,20 @@
 
 <body>
 
- {{>header}}
+  {{>header}}
 
   <!-- Begin page content -->
   <main role="main" class="container">
-    <h1 class="mt-5">Sticky footer with fixed navbar</h1>
-    <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar
-      has been added with
-      <code>padding-top: 60px;</code> on the
-      <code>body &gt; .container</code>.</p>
-    <p>Back to
-      <a href="../sticky-footer">the default sticky footer</a> minus the navbar.</p>
+    <div class="text-center">
+      <h1 class="mt-5">Weather Report</h1>
+      <p class="lead">
+        It's currently {{temperature}}°F . It feels like {{apparentTemperature}}°F
+        <p>Wanna
+          <a href="/">try</a> again</p>
+    </div>
   </main>
 
-{{>footer}}
+  {{>footer}}
   <!-- Bootstrap core JavaScript
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
